test/data/semantic-errors/iterator-variable-already-declared.ava
var x = 0;

for (var x = 0 if x < 10 then x++; end) { ava "hello"; };